Attempt at fixing view on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,4 @@
-body {
+html, body {
   font: 20px Montserrat, sans-serif;
   line-height: 1.8;
   color: #8c8c8c;
